compiler/testData/diagnostics/tests/properties/inferenceFromGetters/blockBodyGetter.kt
// FIR_IDENTICAL

<!PROPERTY_WITH_NO_TYPE_NO_INITIALIZER!>val x<!> get() {
    return 1
}

val y get() = 1
